tests/ui/asm/aarch64/type-check-4.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/type-check-4.rs:17:34
   |
LL | global_asm!("{}", const unsafe { S });
   |                                  ^ constant accesses mutable global memory

error[E0080]: evaluation of constant value failed
  --> $DIR/type-check-4.rs:21:44
   |
LL | global_asm!("{}", const const_foo(unsafe { S }));
   |                                            ^ constant accesses mutable global memory

error[E0080]: evaluation of constant value failed
  --> $DIR/type-check-4.rs:25:44
   |
LL | global_asm!("{}", const const_bar(unsafe { S }));
   |                                            ^ constant accesses mutable global memory

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
